--- a/Src/index.html
+++ b/Src/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Hello World Example</title>
-    <script>
-        alert('Hello, World!');
-    </script>
-    <script>"bundle.js"</script>
 </head>
 <body>
+  <h1>Hello User?</h1>
+  <script> src="bundle.js"></script>
 </body>
 </html>
